--- a/Client/package.json
+++ b/Client/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "proxy": "http://localhost:5174",
   "dependencies": {
     "axios": "^1.7.2",
     "react": "^18.3.1",
